Phase 2 complete: Added JUnit test suite, updated README, and generated executable JAR